cambié palabra en pass sec y añadi en readme el subtitulo

--- a/password-secreto.html
+++ b/password-secreto.html
@@ -17,7 +17,7 @@
     
     <div class="password-sec-container" id="password-sec-container">
         <p class="pass-sec-conv white">
-            Solol da click en el boton de abajo
+            Sólo da click en el boton de abajo
         </p>
         <a href="/answ.html">
             <button class="but--pas-sec" id="but--pas-sec">Continúe</button>
